Hoan thien chuc nang gio hang

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
         @{
             ViewBag.title = "Siêu shop by LazyTeam";
         }
-
         <h1>Danh sách sản phẩm</h1>
         <div class="row">
             @foreach (var item in Model)
@@ -15,6 +14,12 @@
                 <p style="font-weight:700">
                     Giá bán: <span style="color:#f00"> @Convert.ToDecimal(item.giaban).ToString("#,##0")  đ</span>
                 </p>
+                <form method="post" style="margin-bottom:10px" action="#">
+                    <input type="hidden" name="id" value="@Html.DisplayFor(modelItem => item.id)" />
+                    <div style="width:100%; text-align:center">
+                        <input class="btn btn-default" type="submit" value="Xem chi tiết" />
+                    </div>
+                </form>
             </div>
               
             }
